--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:user":"jest --testPathPattern=src/user --coverage --collectCoverageFrom='src/users/**/*.{ts,tsx}'  "
+    "test:user":"jest --testPathPattern=src/user --coverage --collectCoverageFrom='src/users/**/*.{ts,tsx}'  ",
+    "test:user:watch":"jest --watch --testPathPattern=src/user --coverage --collectCoverageFrom='src/users/**/*.{ts,tsx}'  "
+
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.0.1",
