--- a/package.json
+++ b/package.json
@@ -107,7 +107,13 @@
       "jestGlobalMocks.ts",
       "module.ts",
       "dto.ts",
-      "entity.ts"
+      "entity.ts",
+      "middleware.ts",
+      "strategy.ts",
+      "decorator.ts",
+      "bearer-token.middleware copy.ts",
+      "auth.guard.ts",
+      "rbac.guard.ts"
     ],  
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
