--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:integration": "jest --testRegex='.*integration\\.spec\\.ts$'",
     "test:cov": "jest --coverage",
     "test:cov:watch": "jest --watchAll --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -57,7 +58,8 @@
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.22",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
