--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -49,8 +49,12 @@ jobs:
           tar -czf backend.tar.gz backend
           scp -P ${{ secrets.PORT }} backend.tar.gz ${{ secrets.USER }}@${{ secrets.HOST }}:${{ secrets.TARGET_DIR }}/backend-latest.tar.gz
 
+
       - name: Restart service via SSH 
         run: |
+          echo "TARGET_DIR=${{ secrets.TARGET_DIR }}"
+          ls -al ${{ secrets.TARGET_DIR }}
+
           ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
             set -e
             cd ${TARGET_DIR}
@@ -61,3 +65,4 @@ jobs:
             npm run build
             pm2 restart nestjs-app || pm2 start dist/main.js --name nestjs-app --env production
           EOF
+
