--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -49,23 +49,17 @@ jobs:
           tar -czf backend.tar.gz backend
           scp -P ${{ secrets.PORT }} backend.tar.gz ${{ secrets.USER }}@${{ secrets.HOST }}:${{ secrets.TARGET_DIR }}/backend-latest.tar.gz
 
-
-      - name: Restart service via SSH 
-        env:
-         TARGET_DIR: ${{ secrets.TARGET_DIR }}
+      - name: Restart service via SSH
         run: |
-          echo "TARGET_DIR=$TARGET_DIR"
-              ls -al $TARGET_DIR
-          
-          ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} << 'EOF'
+          echo "TARGET_DIR=${{ secrets.TARGET_DIR }}"
+          ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} << EOF
             set -e
-            mkdir -p ${TARGET_DIR}/backend
-            cd ${TARGET_DIR}
+            mkdir -p ${{ secrets.TARGET_DIR }}/backend
+            cd ${{ secrets.TARGET_DIR }}
             tar -xzf backend-latest.tar.gz
-            ln -sfn ${TARGET_DIR}/backend ${TARGET_DIR}/current
-            cd ${TARGET_DIR}/current
+            ln -sfn ${{ secrets.TARGET_DIR }}/backend ${{ secrets.TARGET_DIR }}/current
+            cd ${{ secrets.TARGET_DIR }}/current
             npm install --omit=dev
             npm run build
             pm2 restart nestjs-app || pm2 start dist/main.js --name nestjs-app --env production
           EOF
-
