--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -49,38 +49,34 @@ jobs:
           tar -czf backend.tar.gz backend
           scp -P ${{ secrets.PORT }} backend.tar.gz ${{ secrets.USER }}@${{ secrets.HOST }}:${{ secrets.TARGET_DIR }}/backend-latest.tar.gz
 
-      - name: Restart service via SSH2
+      - name: Restart service via SSH
         env:
           TARGET_DIR: ${{ secrets.TARGET_DIR }}
           HOST: ${{ secrets.HOST }}
           USER: ${{ secrets.USER }}
           PORT: ${{ secrets.PORT }}
         run: |
-          echo "Deploying to $TARGET_DIR on $HOST"
           ssh -p "$PORT" "$USER@$HOST" << 'EOF'
             set -e
 
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            nvm use --lts
-
             echo "✅ Connected to remote server"
-            echo "📦 Extracting build..."
+            node -v
+            npm -v
+            pm2 -v
 
+            echo "📦 Extracting build..."
             mkdir -p "$TARGET_DIR/backend"
             cd "$TARGET_DIR"
             tar -xzf backend-latest.tar.gz
+
+            echo "🔗 Updating symlink..."
             ln -sfn "$TARGET_DIR/backend" "$TARGET_DIR/current"
 
             cd "$TARGET_DIR/current"
 
-            echo "📥 Installing dependencies..."
+            echo "📥 Installing production dependencies..."
             npm install --omit=dev
 
-            echo "🔨 Building project..."
-            npm run build
-
-            echo "🚀 Restarting application..."
+            echo "🚀 Restarting NestJS app with PM2..."
             pm2 restart nestjs-app || pm2 start dist/main.js --name nestjs-app --env production
           EOF
-
