--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted   #ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -74,3 +74,4 @@ jobs:
             echo "📥 Installing production dependencies..."
     
           EOF
+
