--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -8,6 +8,9 @@ jobs:
   deploy:
     runs-on: [self-hosted, nextjs-host]
 
+    env:
+      HEALTHCHECK_URL: ${{ secrets.HEALTHCHECK_URL }}
+
     steps:
       - name: ✅ Checkout repository
         uses: actions/checkout@v3
@@ -48,6 +51,12 @@ jobs:
           echo "Testing SSH connection to ${{ secrets.USER }}@${{ secrets.HOST }} on port ${{ secrets.PORT }}..."
           ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} "echo '✅ SSH connection successful: $(hostname)'"
 
+      - name: ✅ Backup current version for rollback
+        run: |
+          ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
+            "cd '${{ secrets.TARGET_DIR }}'; \
+            if [ -d backend_current ]; then rm -rf backend_backup && mv backend_current backend_backup; fi"
+
       - name: ✅ Compress backend build directory
         run: |
           tar -czf backend.tar.gz backend
@@ -61,20 +70,14 @@ jobs:
           ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
             "set -e; \
             cd '${{ secrets.TARGET_DIR }}'; \
-            rm -rf backend_new; \
-            mkdir backend_new; \
-            tar -xzf backend-latest.tar.gz -C backend_new --strip-components=1; \
+            mkdir backend_current; \
+            tar -xzf backend-latest.tar.gz -C backend_current --strip-components=1; \
             echo '✅ Extraction completed'"
 
       - name: ✅ Fix permissions on remote server
         run: |
           ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
-            "chown -R nextjs:nextjs '${{ secrets.TARGET_DIR }}/backend_new'"
-
-      - name: ✅ Update symlink to point to new build
-        run: |
-          ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
-            "ln -sfn '${{ secrets.TARGET_DIR }}/backend_new' '${{ secrets.TARGET_DIR }}/current'"
+            "chown -R nextjs:nextjs '${{ secrets.TARGET_DIR }}/backend_current'"
 
       - name: ✅ Install production dependencies on remote server
         run: |
@@ -82,22 +85,94 @@ jobs:
             "export NVM_DIR=\$HOME/.nvm && \
               source \$NVM_DIR/nvm.sh && \
               nvm use 20 && \
-              cd '${{ secrets.TARGET_DIR }}/current' && \
+              cd '${{ secrets.TARGET_DIR }}/backend_current' && \
               npm install --omit=dev"
-            
 
-      - name: ✅ Restart PM2 service on remote server
-        run: |
-              ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
-                "export NVM_DIR=\$HOME/.nvm && \
-                  source \$NVM_DIR/nvm.sh && \
-                  nvm use 20 && \
-                  cd '${{ secrets.TARGET_DIR }}/current' && \
-                  pm2 restart app || pm2 start dist/main.js --name app && \
-                  pm2 save"
-            
-
-      - name: ✅ List directory contents (final check)
+      - name: ✅ Zero Downtime Reload using PM2
         run: |
           ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
-            "ls -al '${{ secrets.TARGET_DIR }}/current'"
+            "export NVM_DIR=\$HOME/.nvm && \
+              source \$NVM_DIR/nvm.sh && \
+              nvm use 20 && \
+              cd '${{ secrets.TARGET_DIR }}/backend_current' && \
+              pm2 reload app || pm2 start dist/main.js --name app && \
+              pm2 save"
+
+      - name: ✅ Health Check
+        run: |
+          echo "Checking application health at $HEALTHCHECK_URL"
+          sleep 5
+          http_code=$(curl -s -o /dev/null -w "%{http_code}" "$HEALTHCHECK_URL")
+          if [ "$http_code" != "200" ]; then
+            echo "Health check failed with HTTP $http_code"
+            exit 1
+          fi
+          echo "Health check passed."
+
+      - name: ✅ Rollback if health check failed
+        if: failure()
+        run: |
+          echo "Rolling back to previous stable version..."
+          ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
+            "cd '${{ secrets.TARGET_DIR }}'; \
+            rm -rf backend_current; \
+            mv backend_backup backend_current; \
+            export NVM_DIR=\$HOME/.nvm && source \$NVM_DIR/nvm.sh && nvm use 20 && cd backend_current && pm2 reload app && pm2 save"
+
+      - name: ✅ Slack Notification on Success
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+            --data '{
+              "text": "✅ NestJS deployment succeeded!",
+              "attachments": [
+                {
+                  "color": "#36a64f",
+                  "fields": [
+                    {"title": "Branch", "value": "${{ github.ref }}", "short": true},
+                    {"title": "Commit", "value": "${{ github.sha }}", "short": true},
+                    {"title": "Actor", "value": "${{ github.actor }}", "short": true},
+                    {"title": "Repository", "value": "${{ github.repository }}", "short": true}
+                  ]
+                }
+              ]
+            }' \
+            ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: ✅ Slack Notification on Failure
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+            --data '{
+              "text": "❌ NestJS deployment failed and rollback executed!",
+              "attachments": [
+                {
+                  "color": "#ff0000",
+                  "fields": [
+                    {"title": "Branch", "value": "${{ github.ref }}", "short": true},
+                    {"title": "Commit", "value": "${{ github.sha }}", "short": true},
+                    {"title": "Actor", "value": "${{ github.actor }}", "short": true},
+                    {"title": "Repository", "value": "${{ github.repository }}", "short": true}
+                  ]
+                }
+              ]
+            }' \
+            ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: ✅ Slack Deployment Diff Info
+        run: |
+          curl -X POST -H 'Content-type: application/json' \
+            --data '{
+              "text": "🔍 Deployment Info:",
+              "attachments": [
+                {
+                  "color": "#439FE0",
+                  "fields": [
+                    {"title": "Commit Message", "value": "${{ github.event.head_commit.message }}"},
+                    {"title": "Commit Author", "value": "${{ github.event.head_commit.author.name }}"},
+                    {"title": "Commit Timestamp", "value": "${{ github.event.head_commit.timestamp }}"}
+                  ]
+                }
+              ]
+            }' \
+            ${{ secrets.SLACK_WEBHOOK_URL }}
