--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -98,16 +98,27 @@ jobs:
               pm2 reload app || pm2 start dist/main.js --name app && \
               pm2 save"
 
-      - name: ✅ Health Check
+      - name: ✅ Health Check (2-minute timeout)
         run: |
-          echo "Checking application health at $HEALTHCHECK_URL"
-          sleep 5
-          http_code=$(curl -s -o /dev/null -w "%{http_code}" "$HEALTHCHECK_URL")
-          if [ "$http_code" != "200" ]; then
-            echo "Health check failed with HTTP $http_code"
-            exit 1
-          fi
-          echo "Health check passed."
+                echo "Checking application health at $HEALTHCHECK_URL"
+                RETRIES=24
+                SLEEP=5
+                COUNT=0
+            
+                until [ $COUNT -ge $RETRIES ]; do
+                  http_code=$(curl -s -o /dev/null -w "%{http_code}" "$HEALTHCHECK_URL")
+                  if [ "$http_code" = "200" ]; then
+                    echo "✅ Health check passed."
+                    exit 0
+                  fi
+                  COUNT=$((COUNT+1))
+                  echo "❌ Attempt $COUNT: Health check failed with HTTP $http_code. Retrying in $SLEEP seconds..."
+                  sleep $SLEEP
+                done
+            
+                echo "🔥 Health check failed after $RETRIES attempts (~2 minutes)."
+                exit 1
+            
 
       - name: ✅ Rollback if health check failed
         if: failure()
