--- a/.github/workflows/ssh-deploy.yml
+++ b/.github/workflows/ssh-deploy.yml
@@ -98,37 +98,37 @@ jobs:
               pm2 reload app || pm2 start dist/main.js --name app && \
               pm2 save"
 
-      - name: ✅ Health Check (2-minute timeout)
-        run: |
-                echo "Checking application health at $HEALTHCHECK_URL"
-                RETRIES=120
-                SLEEP=5
-                COUNT=0
+      #- name: ✅ Health Check (2-minute timeout)
+      #  run: |
+      #          echo "Checking application health at $HEALTHCHECK_URL"
+      #          RETRIES=120
+      #          SLEEP=5
+      #          COUNT=0
             
-                until [ $COUNT -ge $RETRIES ]; do
-                  http_code=$(curl -s -o /dev/null -w "%{http_code}" "$HEALTHCHECK_URL")
-                  if [ "$http_code" = "200" ]; then
-                    echo "✅ Health check passed."
-                    exit 0
-                  fi
-                  COUNT=$((COUNT+1))
-                  echo "❌ Attempt $COUNT: Health check failed with HTTP $http_code. Retrying in $SLEEP seconds..."
-                  sleep $SLEEP
-                done
+                # until [ $COUNT -ge $RETRIES ]; do
+                #   http_code=$(curl -s -o /dev/null -w "%{http_code}" "$HEALTHCHECK_URL")
+                #   if [ "$http_code" = "200" ]; then
+                #     echo "✅ Health check passed."
+                #     exit 0
+                #   fi
+                #   COUNT=$((COUNT+1))
+                #   echo "❌ Attempt $COUNT: Health check failed with HTTP $http_code. Retrying in $SLEEP seconds..."
+                #   sleep $SLEEP
+                # done
             
-                echo "🔥 Health check failed after $RETRIES attempts (~2 minutes)."
-                exit 1
+                # echo "🔥 Health check failed after $RETRIES attempts (~2 minutes)."
+                # exit 1
             
 
-      - name: ✅ Rollback if health check failed
-        if: failure()
-        run: |
-          echo "Rolling back to previous stable version..."
-          ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
-            "cd '${{ secrets.TARGET_DIR }}'; \
-            rm -rf backend_current; \
-            mv backend_backup backend_current; \
-            export NVM_DIR=\$HOME/.nvm && source \$NVM_DIR/nvm.sh && nvm use 20 && cd backend_current && pm2 reload app && pm2 save"
+    #  - name: ✅ Rollback if health check failed
+    #    if: failure()
+    #    run: |
+    #      echo "Rolling back to previous stable version..."
+    #      ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} \
+    #        "cd '${{ secrets.TARGET_DIR }}'; \
+    #        rm -rf backend_current; \
+    #        mv backend_backup backend_current; \
+    #        export NVM_DIR=\$HOME/.nvm && source \$NVM_DIR/nvm.sh && nvm use 20 && cd backend_current && pm2 reload app && pm2 save"
 
       - name: ✅ Slack Notification on Success
         if: success()
