--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "@types/multer": "^1.4.12",
     "@types/passport-local": "^1.0.38",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.54.2",
     "cache-manager": "^6.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
