--- a/backend/package.json
+++ b/backend/package.json
@@ -59,6 +59,7 @@
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "joi": "^17.13.3",
+    "multer": "^2.0.1",
     "nest-winston": "^1.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
