--- a/backend/package.json
+++ b/backend/package.json
@@ -57,6 +57,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
+    "express-session": "^1.18.1",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "joi": "^17.13.3",
@@ -85,6 +86,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
