--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.3",
+    "@prisma/client": "6.10.1",
     "@types/multer": "^1.4.12",
     "@types/passport-local": "^1.0.38",
     "bcryptjs": "^3.0.2",
@@ -99,6 +100,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "prisma": "6.10.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
@@ -151,5 +153,9 @@
   },
   "main": "index.js",
   "keywords": [],
-  "description": ""
+  "description": "",
+  "prisma": {
+    "schema": "./prisma/schema/schema.prisma"
+  }
+
 }
