--- a/backend/package.json
+++ b/backend/package.json
@@ -62,6 +62,7 @@
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "joi": "^17.13.3",
+    "logform": "^2.7.0",
     "multer": "^2.0.1",
     "nest-winston": "^1.10.2",
     "passport": "^0.7.0",
@@ -157,5 +158,4 @@
   "prisma": {
     "schema": "./prisma/schema/schema.prisma"
   }
-
 }
